# SPDX-FileCopyrightText: 2025 LunNova
#
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "wine-apc"
version = "0.0.0-proofofconcept"
edition = "2024"
authors = ["Luna Nova <cratesio@lunnova.dev>"]
keywords = ["wine", "client"]
description = "Prototype Wine APC client for wineserver protocol from non-Wine Linux processes"
license = "AGPL-3.0-or-later"
repository = "https://github.com/LunNova/wine-apc"
readme = "README.md"

[dependencies]
anyhow = "1.0.98"
libc = "0.2"
tracing = "0.1"

[target.'cfg(windows)'.dev-dependencies]
winapi = { version = "0.3", features = ["winnt", "winbase", "processthreadsapi", "memoryapi", "errhandlingapi", "winuser", "ntdef"] }

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
